[package]
name = "ez-bencoding"
version = "0.2.1"
edition = "2021"
description = "ez-bencoding is a bencoding library, which uses the bdecode algorithm from libtorrent 3rd edition"
license = "GPL-3.0"

[[bin]]
name = "cat_torrent"
path = "src/cat_torrent.rs"

[dependencies]
thiserror = "2"
anyhow = "1"
bitfields = "0.12"
bytes = "1"